# ja_text_cleaner

./: CHANGELOG.md  README.md  pyproject.toml
ja_text_cleaner/: __init__.py  abc.py  processor.py  restapi.py
tests/: test_cleaner.py  test_inherit.py  test_normalizer.py  test_translate.py
text_cleaner/: mappings.py  name.py  normalizer.py  tokenizer.py
