[tool.poetry]
name = "ja_text_cleaner"
version = "0.0.1"
description = "日本語のための日本語変換ライブラリ"
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sasano8/ja_text_cleaner"

[tool.poetry.dependencies]
python = "^3.8"
mojimoji = "^0.0.11"
jaconv = "^0.3"
romkan = "^0.2.1"
sudachipy = "^0.5.2"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.1"
beautifulsoup4 = "^4.9.3"

black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"
pre-commit = "^2.12.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
sudachidict_core = "^20201223.post1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
